tests/language_modules/08_routines/valid/function_parameters.vf
module FunctionParameters

function add(left: Integer, right: Integer) returns Integer
is
    return left + right
end add

end FunctionParameters